# eetree-funpack-workshop

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.el  collection.py  data.org  fmradio_pluto.grc  main.c  main.cc  main.h  main.py  makefile  p-switch-color-flip.c  requirements.txt  tinyml.cc  tinyml.h  top_block.py
application/: edge-impuse-firmware.cpp
basketball-mentor/: LSM9DS1.cpp  arduino_output_handler.cpp  basketball-mentor-model-data.cpp  basketball-mentor-model-data.h  basketball-mentor.ino  gesture_predictor.cpp  gesture_predictor.h  sensor-handler.cpp  sensor-handler.h
e2studio/: .cproject  R7FA2A1AB3CFM.pincfg  RA2A1-EK.pincfg  configuration.xml  quickstart_ek_ra2a1_ep Debug.launch  ra_cfg.txt
e2studio/Debug/: makefile  makefile.init  quickstart_ek_ra2a1_ep.elf  quickstart_ek_ra2a1_ep.elf.in  quickstart_ek_ra2a1_ep.hex  quickstart_ek_ra2a1_ep.map  sources.mk
e2studio/Debug/ra/board/ra2a1_ek/: board_init.d  board_leds.d  subdir.mk
e2studio/Debug/ra/fsp/src/bsp/mcu/all/: bsp_clocks.d  bsp_common.d  bsp_delay.d  bsp_group_irq.d  bsp_guard.d  bsp_io.d  bsp_irq.d  bsp_register_protection.d  bsp_rom_registers.d  bsp_sbrk.d  bsp_security.d  subdir.mk
e2studio/Debug/ra/fsp/src/r_adc/: r_adc.d  subdir.mk
e2studio/Debug/ra/fsp/src/r_gpt/: r_gpt.d  subdir.mk
e2studio/Debug/ra/fsp/src/r_icu/: r_icu.d  subdir.mk
e2studio/Debug/ra/fsp/src/r_ioport/: r_ioport.d  subdir.mk
e2studio/Debug/ra/fsp/src/r_usb_basic/: r_usb_basic.d  subdir.mk
e2studio/Debug/ra/fsp/src/r_usb_basic/src/driver/: r_usb_cdataio.d  r_usb_clibusbip.d  r_usb_cstd_rtos.d  r_usb_hbc.d  r_usb_hcontrolrw.d  r_usb_hdriver.d  r_usb_hhubsys.d  r_usb_hintfifo.d  r_usb_hinthandler_usbip0.d  r_usb_hinthandler_usbip1.d  r_usb_hlibusbip.d  r_usb_hmanager.d  r_usb_hscheduler.d  r_usb_hsignal.d  r_usb_hstdfunction.d  r_usb_pbc.d  r_usb_pcontrolrw.d  r_usb_pdriver.d  r_usb_pintfifo.d  r_usb_pinthandler_usbip0.d  r_usb_plibusbip.d  r_usb_psignal.d  r_usb_pstdfunction.d  r_usb_pstdrequest.d  subdir.mk
e2studio/Debug/ra/fsp/src/r_usb_basic/src/hw/: r_usb_creg_abs.d  r_usb_creg_access.d  r_usb_dma.d  r_usb_hostelectrical.d  r_usb_hreg_abs.d  r_usb_hreg_access.d  r_usb_mcu.d  r_usb_preg_abs.d  r_usb_preg_access.d  subdir.mk
e2studio/Debug/ra/fsp/src/r_usb_pcdc/src/: r_usb_pcdc_driver.d  subdir.mk
e2studio/Debug/ra_gen/: common_data.d  hal_data.d  main.d  pin_data.d  subdir.mk  vector_data.d
e2studio/Debug/src/: common_init.d  hal_entry.d  r_usb_pcdc_descriptor.d  subdir.mk
e2studio/ra_cfg/fsp_cfg/: r_adc_cfg.h  r_gpt_cfg.h  r_usb_basic_cfg.h  r_usb_class_cfg.h  r_usb_pcdc_cfg.h
e2studio/ra_cfg/fsp_cfg/bsp/: board_cfg.h  bsp_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h
e2studio/ra_gen/: RA2A1-EK.csv  bsp_clock_cfg.h  bsp_pin_cfg.h  hal_data.c  hal_data.h  pin_data.c  vector_data.c  vector_data.h
e2studio/script/: memory_regions.ld
e2studio/src/: common_init.c  common_init.h  hal_entry.c
edge-impulse-sdk/platform/sensors/: ei_fusion_sensors_config.h  ei_microphone.cpp
edge-impulse-sdk/utility/include-path-fix/firmware-sdk/: ei_run_audio_impulse.cpp  ei_run_camera_impulse.cpp
oled/: AsciiLib.c  AsciiLib.h  oled.c  oled.h  oledfont.h
rgb-led/: README.md  hsb2rgb_led.c  hsb2rgb_led.h  rgb_led.c  rgb_led.h
src/main/python/: demod.py  main.py  soapy.py  utils.py
src/main/resources/base/: mainwindow.ui
src/main/resources/base/lib/sdr/: libSoapySDR.dylib
(+3 files in other folders)
